--- a/src/app/components/signup-panel/signup-panel.component.scss
+++ b/src/app/components/signup-panel/signup-panel.component.scss
@@ -16,6 +16,18 @@
   .row {
     margin-bottom: 10px;
     margin-top: 10px;
+
+    input {
+      border: 2px solid #eee;
+      border-radius:10px;
+      padding: 6px;
+    }
+
+    input:focus {
+      outline:none;
+      border: 2px solid #aaa;
+      box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+    }
   }
 
   .vertical-center{
