--- a/src/app/components/login-panel/login-panel.component.scss
+++ b/src/app/components/login-panel/login-panel.component.scss
@@ -4,6 +4,18 @@
   position: relative;
   background-color: white;
 
+  input {
+    border: 2px solid #eee;
+    border-radius:10px;
+    padding: 6px;
+  }
+
+  input:focus{
+    outline:none;
+    border: 2px solid #aaa;
+    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+  }
+
   .panel-title{
     text-align: center;
   }
