--- a/src/app/components/rental/rental-create/rental-create.component.html
+++ b/src/app/components/rental/rental-create/rental-create.component.html
@@ -12,7 +12,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <input type="text" formControlName="title" class="form-control" placeholder="Title">
+                <input type="text" formControlName="title" class="form-control" placeholder=" Title">
               </label>
               <div *ngIf="submitted && getFromForm.title.invalid" class="alert alert-danger">
                 <a class="close" data-dismiss="alert" href="#"></a>Tittle required
@@ -23,7 +23,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <textarea formControlName="description" class="form-control" placeholder="Description" rows="2"
+                <textarea formControlName="description" class="form-control" placeholder=" Description" rows="6"
                           wrap="soft"></textarea>
               </label>
               <div *ngIf="submitted && getFromForm.description.invalid" class="alert alert-danger">
@@ -37,7 +37,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <input type="text" formControlName="address" class="form-control" placeholder="Address">
+                <input type="text" formControlName="address" class="form-control" placeholder=" Address">
               </label>
               <div *ngIf="submitted && getFromForm.address.invalid" class="alert alert-danger">
                 <a class="close" data-dismiss="alert" href="#"></a>Address required
@@ -48,7 +48,14 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <input type="text" formControlName="city" class="form-control" placeholder="City">
+              <input type="text"
+                     class="form-control"
+                     placeholder=" City"
+                     formControlName="city"
+                     [matAutocomplete]="auto">
+              <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let city of filteredCity | async" [value]="city">{{city}}</mat-option>
+              </mat-autocomplete>
               </label>
               <div *ngIf="submitted && getFromForm.city.invalid" class="alert alert-danger">
                 <a class="close" data-dismiss="alert" href="#"></a>City required
@@ -64,7 +71,7 @@
                 <select formControlName="category" class="form-control">
                   <option value="" selected disabled hidden >--Please choose an option--</option>
                   <option *ngFor="let category of categories" [ngValue]="category">
-                    {{ category }}
+                    {{ category.toString().toLowerCase() }}
                   </option>
                 </select>
               </label>
@@ -77,7 +84,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <input type="text" formControlName="bedrooms" class="form-control" placeholder="Bedrooms">
+                <input type="text" formControlName="bedrooms" class="form-control" placeholder=" Bedrooms">
               </label>
               <div *ngIf="submitted && getFromForm.bedrooms.invalid" class="alert alert-danger">
                 <a class="close" data-dismiss="alert" href="#"></a>Bedrooms required
@@ -87,10 +94,22 @@
         </div>
 
         <div class="row">
+
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <input type="text" formControlName="dailyRate" class="form-control" placeholder="Daily Rate">
+                <input type="text" formControlName="quests" class="form-control" placeholder=" Number Of Quests">
+              </label>
+              <div *ngIf="submitted && getFromForm.quests.invalid" class="alert alert-danger">
+                <a class="close" data-dismiss="alert" href="#"></a>Number of quests required
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="form-group">
+              <label>
+                <input type="text" formControlName="dailyRate" class="form-control" placeholder=" Daily Rate">
               </label>
               <div *ngIf="submitted && getFromForm.dailyRate.invalid" class="alert alert-danger">
                 <a class="close" data-dismiss="alert" href="#"></a>Daily rate required
@@ -109,7 +128,7 @@
           </div>
           <div class="preview-images col-xs-12 col-sm-12 col-md-12 col-lg-10">
               <img *ngFor="let url of urls | keyvalue" [src]="url.value" class="image"
-                   width="180" height="100" alt="" (click)="deleteImageFromSelected(url.key)">
+                   alt="" (dblclick)="deleteImageFromSelected(url.key)">
           </div>
         </div>
       </div>
