--- a/src/app/components/rental/rental-create/rental-create.component.html
+++ b/src/app/components/rental/rental-create/rental-create.component.html
@@ -98,10 +98,10 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <label>
-                <input type="text" formControlName="quests" class="form-control" placeholder=" Number Of Quests">
+                <input type="text" formControlName="guests" class="form-control" placeholder=" Number Of Guests">
               </label>
-              <div *ngIf="submitted && getFromForm.quests.invalid" class="alert alert-danger">
-                <a class="close" data-dismiss="alert" href="#"></a>Number of quests required
+              <div *ngIf="submitted && getFromForm.guests.invalid" class="alert alert-danger">
+                <a class="close" data-dismiss="alert" href="#"></a>Number of guests required
               </div>
             </div>
           </div>
