--- a/src/app/components/rental/rental-detail/rental-detail.component.scss
+++ b/src/app/components/rental/rental-detail/rental-detail.component.scss
@@ -277,7 +277,7 @@
   .comments-section {
     background: #FFFFFF;
     width: 80%;
-    margin: 0 auto;
+    margin: 8vw auto 0;
     padding: 10px;
     box-shadow: 0 2px 7px 1px #aa9191;
 
