--- a/src/app/components/user/account-history/account-history.component.html
+++ b/src/app/components/user/account-history/account-history.component.html
@@ -17,7 +17,7 @@
         <td (click)="showOffer(offer.rentalOfferID)">{{offer.offerTittle}}</td>
         <td (click)="showOffer(offer.rentalOfferID)">{{offer.startRentDate}}</td>
         <td (click)="showOffer(offer.rentalOfferID)">{{offer.endRentDate}}</td>
-        <td (click)="showOffer(offer.rentalOfferID)">1{{offer.price}}$</td>
+        <td (click)="showOffer(offer.rentalOfferID)">{{offer.price}}$</td>
         <td (click)="showOffer(offer.rentalOfferID)">Finalized</td>
       </tr>
       </tbody>
