--- a/src/app/components/rental/rental-detail/rental-detail.component.scss
+++ b/src/app/components/rental/rental-detail/rental-detail.component.scss
@@ -97,7 +97,6 @@
         box-shadow: 1px 2px 3px 2px #a1a1a0;
         border-radius: 4px;
         line-height: 1.6;
-        margin-right: 1rem;
         margin-bottom: 1rem;
         font-size: 1rem;
       }
@@ -111,6 +110,7 @@
     text-align: center;
     display: flex;
     flex-wrap: wrap;
+    flex-grow: 1;
 
     .room-details {
       width: 250px;
@@ -126,20 +126,15 @@
       font-size: 1rem;
 
       @media (max-width: 576px) {
-        width: 150px;
-        height: 100px;
+        width: 250px;
+        height: 150px;
         margin-right: 0.25rem;
         margin-left: 0.25rem;
         flex-grow: 1;
-        font-size: 0.8rem;
       }
 
       h6 {
         padding-top: 1rem;
-
-        @media (max-width: 576px) {
-          padding-top: 0;
-        }
       }
 
       .value-box {
@@ -152,6 +147,7 @@
           padding-left: 10px;
           text-transform: lowercase;
           display: inline-flex;
+          font-weight: 500;
           align-items: center;
         }
 
@@ -166,6 +162,35 @@
     .room-details:hover {
       transform: scale(1.05);
     }
+  }
+
+  .contact-data {
+    padding: 1rem;
+    margin-left: 10px;
+    margin-right: 30px;
+    @media (max-width: 576px) {
+      margin-left: 4px;
+      margin-right: 4px;
+    }
+    border: 2px solid #e9e9e9;
+    background-color: #f6f6f6;
+    box-shadow: 1px 2px 3px 2px #a1a1a0;
+    border-radius: 4px;
+    font-size: 1rem;
+
+      .contact-data-box {
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+
+        .contact-phone, .contact-email, .contact-name {
+          font-weight: 500;
+        }
+      }
+  }
+
+  .contact-data:hover {
+    transform: scale(1.01);
   }
 
   .reservation-confirmation-section {
@@ -191,6 +216,7 @@
       border-radius: 4px;
 
       .date {
+        font-weight: 500;
         .material-icons {
           font-size: 1rem !important;
           margin-right: 5px;
@@ -205,9 +231,6 @@
       > * {
         font-size: 1rem;
 
-        @media(max-width: 576px) {
-          font-size: 0.8rem;
-        }
       }
 
     }
@@ -236,10 +259,7 @@
       .final-price {
         font-size: 1rem;
         text-align: center;
-
-        @media(max-width: 576px) {
-          font-size: 0.8rem;
-        }
+        font-weight: 500;
       }
     }
 
@@ -277,7 +297,7 @@
   .comments-section {
     background: #FFFFFF;
     width: 80%;
-    margin: 8vw auto 0;
+    margin: 2vw auto 0;
     padding: 10px;
     box-shadow: 0 2px 7px 1px #aa9191;
 
@@ -344,9 +364,6 @@
             padding-right: 12px;
             padding-left: 6px;
 
-            @media(max-width: 576px) {
-              font-size: 0.8rem;
-            }
           }
 
           .progress {
@@ -391,6 +408,10 @@
         background-size: contain;
         background-repeat: no-repeat;
         height: 100px;
+
+        @media(max-width: 576px) {
+          height: 70px;
+        }
       }
 
       .review-block-name {
@@ -402,6 +423,10 @@
         font-size: 1.5rem;
         padding-left: 0;
         padding-bottom: 20px;
+
+        @media (max-width: 576px) {
+          font-size: 1rem;
+        }
       }
 
       .review-block-description {
