--- a/src/app/components/signup-panel/signup-panel.component.scss
+++ b/src/app/components/signup-panel/signup-panel.component.scss
@@ -23,7 +23,20 @@
       padding: 6px;
     }
 
-    input:focus {
+    select {
+      border: 2px solid #eee;
+      border-radius:10px;
+      padding: 6px;
+      background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png) no-repeat right;
+      -webkit-appearance: none;
+      background-position-x: 98%;
+    }
+
+    label {
+      width: 100%;
+    }
+
+    input:focus, select:focus {
       outline:none;
       border: 2px solid #aaa;
       box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
